package com.realestate;

import com.google.inject.Inject;
import com.google.inject.Singleton;
import java.sql.Connection;
import java.sql.PreparedStatement;
import java.sql.ResultSet;
import java.sql.SQLException;

@Singleton
public class DealService {
    private final Connection connection;

    @Inject
    public DealService(Connection connection) {
        this.connection = connection;
    }

    public void saveDeal(Deal deal) {
        String sql = "INSERT OR REPLACE INTO deals (id, date, status) VALUES (?, ?, ?)";

        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
            stmt.setInt(1, deal.getId());
            stmt.setString(2, deal.getDate());
            stmt.setString(3, deal.getStatus());
            stmt.executeUpdate();
        } catch (SQLException e) {
            throw new RuntimeException("Failed to save deal", e);
        }
    }

    public void saveBuyer(Buyer buyer) {
        String sql = "INSERT OR REPLACE INTO buyers (id, name, contactInfo, deposit) VALUES (?, ?, ?, ?)";

        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
            stmt.setInt(1, buyer.getId());
            stmt.setString(2, buyer.getName());
            stmt.setString(3, buyer.getContactInfo());
            stmt.setFloat(4, buyer.getDeposit());
            stmt.executeUpdate();
        } catch (SQLException e) {
            throw new RuntimeException("Failed to save buyer", e);
        }
    }

    public void saveAgent(Agent agent) {
        String sql = "INSERT OR REPLACE INTO agents (id, name, contactInfo, agency) VALUES (?, ?, ?, ?)";

        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
            stmt.setInt(1, agent.getId());
            stmt.setString(2, agent.getName());
            stmt.setString(3, agent.getContactInfo());
            stmt.setString(4, agent.getAgency());
            stmt.executeUpdate();
        } catch (SQLException e) {
            throw new RuntimeException("Failed to save agent", e);
        }
    }

    public void saveSeller(Seller seller) {
        String sql = "INSERT OR REPLACE INTO sellers (id, name, contactInfo, property) VALUES (?, ?, ?, ?)";

        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
            stmt.setInt(1, seller.getId());
            stmt.setString(2, seller.getName());
            stmt.setString(3, seller.getContactInfo());
            stmt.setString(4, seller.getProperty());
            stmt.executeUpdate();
        } catch (SQLException e) {
            throw new RuntimeException("Failed to save seller", e);
        }
    }

    /**
     * Знаходить угоду за ID
     */
    public Deal findDealById(int id) {
        String sql = "SELECT id, date, status FROM deals WHERE id = ?";

        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
            stmt.setInt(1, id);

            try (ResultSet rs = stmt.executeQuery()) {
                if (rs.next()) {
                    Deal deal = new Deal();
                    deal.setId(rs.getInt("id"));
                    deal.setDate(rs.getString("date"));
                    deal.setStatus(rs.getString("status"));
                    return deal;
                }
            }
        } catch (SQLException e) {
            throw new RuntimeException("Failed to find deal", e);
        }
        return null;
    }

    /**
     * Оновлює статус угоди
     */
    public void updateDealStatus(int dealId, String status) {
        String sql = "UPDATE deals SET status = ? WHERE id = ?";

        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
            stmt.setString(1, status);
            stmt.setInt(2, dealId);
            stmt.executeUpdate();
        } catch (SQLException e) {
            throw new RuntimeException("Failed to update deal status", e);
        }
    }
}